log
do., 10 de abr. de 2022 10:37:04: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
658e514
do., 10 de abr. de 2022 11:05:16: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:44:10: error: unused variable 'posicion' [-Werror=unused-variable]
     long posicion = hash(key , map->capacity);
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9e4d471
do., 10 de abr. de 2022 11:05:37: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d7c9b9a
do., 10 de abr. de 2022 11:18:43: 
 hashmap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
d91253c
do., 10 de abr. de 2022 11:31:18: 
 hashmap.c | 44 +++++++++++++++++++++++++++++++++-----------
 1 file changed, 33 insertions(+), 11 deletions(-)
 tests:  6|4
total_score: 30/70
d76c4e1
do., 10 de abr. de 2022 11:34:19: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:102:26: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
             map->current = key;
                          ^
cc1.exe: all warnings being treated as errors
Compilation failed
69148af
do., 10 de abr. de 2022 11:35:46: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:102:26: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
             map->current = map->buckets[index]->value;
                          ^
cc1.exe: all warnings being treated as errors
Compilation failed
47e1ae6
do., 10 de abr. de 2022 11:37:03: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
1629c14
do., 10 de abr. de 2022 11:39:17: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
d0d53b4
do., 10 de abr. de 2022 11:39:39: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
3d04ab6
do., 10 de abr. de 2022 11:40:34: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
f2d56b5
do., 10 de abr. de 2022 11:50:46: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
28b8baf
do., 10 de abr. de 2022 11:51:44: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:130:26: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
             map->current = map->buckets[cont]->key;
                          ^
cc1.exe: all warnings being treated as errors
Compilation failed
de21f65
do., 10 de abr. de 2022 11:52:27: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4eecd87
do., 10 de abr. de 2022 11:53:49: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
c304655
do., 10 de abr. de 2022 11:55:31: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
1fbfd39
do., 10 de abr. de 2022 11:56:29: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
9681c43
do., 10 de abr. de 2022 11:58:46: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
88f7568
do., 10 de abr. de 2022 12:12:26: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
7775f6c
do., 10 de abr. de 2022 12:12:57: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
86889a4
do., 10 de abr. de 2022 12:20:47: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:74:5: error: expected ',' or ';' before 'printf'
     printf("\nel porcentaje es : %li\n", porcentaje);
     ^~~~~~
hashmap.c:73:10: error: unused variable 'porcentaje' [-Werror=unused-variable]
     long porcentaje = ((map->capacity * 100)/map->size)
          ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
380b96e
do., 10 de abr. de 2022 12:27:32: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:73:13: error: variable 'old_buckets' set but not used [-Werror=unused-but-set-variable]
     Pair ** old_buckets = (Pair **) calloc (map->capacity , sizeof(HashMap));
             ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2ede92d
do., 10 de abr. de 2022 12:49:54: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:77:10: error: variable 'index' set but not used [-Werror=unused-but-set-variable]
     long index;
          ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4fc6b1d
do., 10 de abr. de 2022 12:50:12: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bb2bbb4
do., 10 de abr. de 2022 13:03:15: 
 hashmap.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:84:10: error: redeclaration of 'index' with no linkage
     long index;
          ^~~~~
hashmap.c:74:10: note: previous declaration of 'index' was here
     long index;
          ^~~~~
hashmap.c:84:10: error: unused variable 'index' [-Werror=unused-variable]
     long index;
          ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0998ccf
do., 10 de abr. de 2022 13:03:28: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:74:10: error: unused variable 'index' [-Werror=unused-variable]
     long index;
          ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a2e09ce
do., 10 de abr. de 2022 19:35:32: 
 hashmap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:96:10: error: unused variable 'old_size' [-Werror=unused-variable]
     long old_size = map->size;
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0f5a98f
do., 10 de abr. de 2022 19:40:45: 
 hashmap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:93:4: error: "/*" within comment [-Werror=comment]
    /*
     
cc1.exe: all warnings being treated as errors
Compilation failed
9ae10c1
do., 10 de abr. de 2022 19:42:29: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
8171647
do., 10 de abr. de 2022 19:44:52: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
666ca00
do., 10 de abr. de 2022 19:46:21: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
dab96fc
do., 10 de abr. de 2022 19:47:26: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
ae080c3
do., 10 de abr. de 2022 19:48:31: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
188bccb
do., 10 de abr. de 2022 19:54:10: 
 hashmap.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:105:25: error: implicit declaration of function 'nextmap' [-Werror=implicit-function-declaration]
         oldBuckets[i] = nextmap(map);
                         ^~~~~~~
hashmap.c:105:23: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
         oldBuckets[i] = nextmap(map);
                       ^
cc1.exe: all warnings being treated as errors
Compilation failed
4087010
do., 10 de abr. de 2022 19:54:22: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
total_score: 70/70
d9d6680
do., 10 de abr. de 2022 19:56:21: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
b1d89c3
do., 10 de abr. de 2022 19:57:24: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
7b58749
do., 10 de abr. de 2022 20:01:41: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  0|0
8e6768d
do., 10 de abr. de 2022 20:03:13: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  16|1
total_score: 60/70
1d87da1
